# Protetor-pdf

./: .breakpoints  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main_protetor-de-pdf.yml
templates/: index.html
